--- a/app/Connect/Connect.module.css
+++ b/app/Connect/Connect.module.css
@@ -1,4 +1,3 @@
-/* Connect.module.css */
 .contact {
   background: linear-gradient(90.21deg, #300934 -5.91%, #1c1c44 111.58%);
   padding: 60px 0 200px 0;
@@ -6,18 +5,18 @@
 
 .imageCol {
   display: flex;
-  justify-content: flex-start; /* Align image to the left */
+  justify-content: center;
   align-items: center;
 }
 
 .formCol {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
 .contactImage {
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -97,6 +96,12 @@
 @media (max-width: 768px) {
   .contact {
     padding: 60px 0 100px 0;
+  }
+
+  .imageCol,
+  .formCol {
+    justify-content: center;
+    align-items: center;
   }
 
   .contactTitle {
